@@ -17,6 +17,9 @@
       sftp-glob.h sftp-int.c sftp-server.c sftp.c ssh-keygen.c sshconnect.c 
       sshconnect2.c sshd.c]
      fix whitespace: unexpand + trailing spaces.
+   - markus@cvs.openbsd.org 2001/04/05 11:09:17
+     [clientloop.c compat.c compat.h]
+     add SSH_BUG_NOREKEY and detect broken (=all old) openssh versions.
 
 20010405
  - OpenBSD CVS Sync                                              
@@ -4889,4 +4892,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1067 2001/04/05 23:26:32 mouring Exp $
+$Id: ChangeLog,v 1.1068 2001/04/05 23:28:36 mouring Exp $
